Cambio de descuento

--- a/index.html
+++ b/index.html
@@ -91,9 +91,7 @@
                 <div class="main__descuento__descripcion contenedor">
                     <img class="main__descuento__descripcion__img" src="img/20201117_155824.jpg" alt="Descuentos">
 
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo, minus. Soluta exercitationem assumenda distinctio praesentium quia, accusantium laudantium corrupti dolore rem quisquam necessitatibus, minus incidunt doloremque optio.
-                        Adipisci, porro mollitia! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat quod commodi at blanditiis quasi illum adipisci hic! Accusantium pariatur nam doloribus, dolores sit eum rem porro unde modi, a atque?
-
+                    <p>Consigue grandes descuentos en productos seleccionados. Cada una sujeta a stock. Los cambios de estos productos luego de realizar la compra están sujetas al stock, sí no hay stock del producto seleccionado podrá elegir otro producto abonando de manera facil la diferencial!.
                     </p>
                 </div>
             </div>
