cambio de texto

--- a/nosotros.html
+++ b/nosotros.html
@@ -62,9 +62,8 @@
                 <img src="img/pexels-artem-beliaikin-1036856.jpg" alt="Acerca de nosotros">
 
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime tenetur quos cupiditate, quisquam tempore earum, similique debitis, sequi enim eos eum soluta voluptates unde minus reprehenderit dolorum asperiores expedita repellat? Lorem, ipsum dolor
-                    sit amet consectetur adipisicing elit. Magni vel molestias omnis facilis dolorem repellendus est dolorum magnam necessitatibus. Maiores magnam quibusdam qui ab modi totam autem distinctio nam deleniti? Lorem ipsum dolor sit amet, consectetur
-                    adipisicing elit. Molestias ipsum nemo itaque sint officiis quasi recusandae ut. Similique exercitationem illo recusandae temporibus, labore perspiciatis at iste vel, corporis numquam sed.
+                BermaHivel es una marca que inspira a las mujeres a encontrar su propio look. Buscamos acompañar a todas, en cualquier momento del día, y en diferentes ocasiones. Trabajamos con pasión para llevar a cabo este proyecto y generar un vínculo sostenible con quienes confían en nuestra marca.
+                Nuestras colecciones son para mujeres urbanas y activas que quieren combinar tendencia y comodidad, con prendas fáciles y versátiles que las acompañen en cualquier ocasión de uso y que no responden a una edad o cuerpo específico sino a un estilo propio. Nuestros diseños aportan una mirada moderna y femenina a los favoritos de todo guardarropa con una gran variedad de categorías desde tus básicos esenciales, las mejores prendas para ir a trabajar, jeans de calce perfecto y las prendas clave de la temporada.
                 </p>
 
             </div>
