--- a/blog.html
+++ b/blog.html
@@ -69,9 +69,7 @@
                 <div class="publicacion">
                     <p>Publicado <span>4/01/2020</span></p>
                 </div>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi vel sint perspiciatis reiciendis iusto reprehenderit quidem laboriosam voluptates distinctio? Dolores, saepe nisi. Non, fugit tempora delectus voluptatem doloribus aut ducimus.
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores quibusdam reprehenderit beatae, harum, consequuntur in repudiandae rerum iusto obcaecati exercitationem eligendi maxime ipsa eveniet ullam quasi. Modi sunt dignissimos
-                    repellat. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima iure veritatis eos ipsam. Cum qui sit optio voluptas delectus quas ullam hic officiis atque placeat voluptatum doloremque ex, esse dignissimos!</p>
+                <p> Este no es un momento cualquiera. Éste 2020 marca el fin de una década y el próximo comienzo de una nueva. Un periodo completo, en el que predominó la fusión de estilos y se abandonaron como en una suerte de depuración viejos conceptos, verá su fín. Un espacio de tiempo en el que ya no existía un único mandato, textura, estampa o color dominante como en la moda de hace veinte años atrás, sino donde se mezclaron estilismos, se mejoraron procesos, se incorporó tecnología y también se volvió al hand made, los mixes fueron protagonistas, se habló de paletas de colores completas o tipologías que evolucionaron y terminaron por convivir todas juntas dentro de una misma apuesta, aunque tiempo atrás hubieran sido perfectas antagónicas.</p>
                 <div class="boton botonsecundario"> <a href="#">Leer más</a></div>
             </div>
 
@@ -85,9 +83,7 @@
                 <div class="publicacion">
                     <p>Publicado <span>4/01/2020</span></p>
                 </div>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi vel sint perspiciatis reiciendis iusto reprehenderit quidem laboriosam voluptates distinctio? Dolores, saepe nisi. Non, fugit tempora delectus voluptatem doloribus aut ducimus.
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores quibusdam reprehenderit beatae, harum, consequuntur in repudiandae rerum iusto obcaecati exercitationem eligendi maxime ipsa eveniet ullam quasi. Modi sunt dignissimos
-                    repellat. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima iure veritatis eos ipsam. Cum qui sit optio voluptas delectus quas ullam hic officiis atque placeat voluptatum doloremque ex, esse dignissimos!</p>
+                <p>Femeninos y de impronta casual juvenil, la primavera verano 2020 de la marca argentina de indumentaria nos atrapa con una completísima propuesta en la que incluye los items claves de temporada. Vestidos con escotes cruzados o "v" cortos y largos, monos, minis y maxifaldas, shorts, blazers, sacos y chaquetas que completan estilismos para toda ocasión. </p>
                 <button type="button" class="btn btn-info btn-lg botonsecundario" data-toggle="modal" data-target="#leerMas">Leer más</button>
                 <div class="modal fade" id="leerMas" role="dialog">
                     <div class="modal-dialog">
