modificacion del lorem

--- a/blog.html
+++ b/blog.html
@@ -99,13 +99,9 @@
                                     <p>Publicado <span>4/01/2020</span></p>
                                 </div>
                                 <img src="img/pexels-murat-esibatir-4355377.jpg" alt="ropa de noche">
-                                <p>Some text in them Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic maxime pariatur quos voluptas aspernatur iusto minima optio nihil blanditiis temporibus dicta labore esse porro, harum repellat doloribus dolore
-                                    sapiente facere?Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero voluptatem dicta quasi dolorum officiis! Perspiciatis ab quaerat eius veniam voluptatem rem, numquam quibusdam accusantium. Dolorum dolores
-                                    quia voluptates iure? Cupiditate. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id corporis eveniet eum vero repudiandae. Dignissimos molestiae id nisi distinctio voluptatibus recusandae ab voluptate repudiandae
-                                    quibusdam. Et similique assumenda inventore pariatur.</p>
+                                <p>Femeninos y de impronta casual juvenil, la primavera verano 2020 de la marca argentina de indumentaria nos atrapa con una completísima propuesta en la que incluye los items claves de temporada. Vestidos con escotes cruzados o "v" cortos y largos, monos, minis y maxifaldas, shorts, blazers, sacos y chaquetas que completan estilismos para toda ocasión.</p>
                                 <img src="img/pexels-ekaterina-bolovtsova-5970910.jpg" alt="">
-                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus cumque architecto nobis ex eum consequatur amet assumenda dolorem minima, blanditiis eius rem atque consequuntur ipsam sunt illum tempore, sint Lorem ipsum
-                                    dolor sit amet, consectetur adipisicing elit. Quod aperiam rerum incidunt adipisci ducimus alias, temporibus tempora aspernatur nobis ut cum ex rem sunt inventore, ratione, molestiae libero explicabo illum!</p>
+                                <p>Coloridas estampas en donde destacan variantes de animal print, rayas y flores dan vida a los diseños de una colección sin desperdicios. </p>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn botonsecundario" data-dismiss="modal">Cerrar</button>
