--- a/nosotros.html
+++ b/nosotros.html
@@ -19,7 +19,7 @@
 <body>
 
 
-    <header class="header">
+      <header class="header">
 
         <div class="header__barra  ">
             <!-- cabecera-->
@@ -29,15 +29,24 @@
             </div>
             <div class=" header__barra__logo header__barra__logo__movil">
 
-                <a href="index.html">BH</a></h1>
+                <a href="index.html">BH</a>
             </div>
-
+            <!--Menu movil-->
             <nav class="header__barra__menu ">
                 <div class="header__barra__menu__menu-bar">
                     <ul class=" header__barra__menu__nav-item">
 
-                        <i class="fas fa-bars"></i>
+                        <li><i class="fas fa-bars"> </i>
+                            <ul class="items">
+                                <li class="header__barra__menu__nav-item "><a class="nav-link" href="productos.html">Productos</a></li>
+                                <li class="header__barra__menu__nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
+                                <li class="header__barra__menu__nav-item"><a class="nav-link" href="ingresar.html">Ingresar</a></li>
+                                <li class="header__barra__menu__nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
+                                <li class="header__barra__menu__nav-item"><a href="#"><i class="fas fa-shopping-basket"></i></a>
+                                </li>
 
+                            </ul>
+                        </li>
 
                     </ul>
                 </div>
