cambio de textos

--- a/blog.html
+++ b/blog.html
@@ -22,7 +22,6 @@
 
 
     <header class="header">
-  <header class="header">
 
         <div class="header__barra  ">
             <!-- cabecera-->
@@ -65,7 +64,6 @@
             </nav>
 
         </div>
-
     </header>
     <main class="contenedor">
         <div class="encabezado">
@@ -79,7 +77,10 @@
                 <div class="publicacion">
                     <p>Publicado <span>4/01/2020</span></p>
                 </div>
-                <p> Este no es un momento cualquiera. Éste 2020 marca el fin de una década y el próximo comienzo de una nueva. Un periodo completo, en el que predominó la fusión de estilos y se abandonaron como en una suerte de depuración viejos conceptos, verá su fín. Un espacio de tiempo en el que ya no existía un único mandato, textura, estampa o color dominante como en la moda de hace veinte años atrás, sino donde se mezclaron estilismos, se mejoraron procesos, se incorporó tecnología y también se volvió al hand made, los mixes fueron protagonistas, se habló de paletas de colores completas o tipologías que evolucionaron y terminaron por convivir todas juntas dentro de una misma apuesta, aunque tiempo atrás hubieran sido perfectas antagónicas.</p>
+                <p>Este no es un momento cualquiera. Éste 2020 marca el fin de una década y el próximo comienzo de una nueva. Un periodo completo, en el que predominó la fusión de estilos y se abandonaron como en una suerte de depuración viejos conceptos,
+                    verá su fín. Un espacio de tiempo en el que ya no existía un único mandato, textura, estampa o color dominante como en la moda de hace veinte años atrás, sino donde se mezclaron estilismos, se mejoraron procesos, se incorporó tecnología
+                    y también se volvió al hand made, los mixes fueron protagonistas, se habló de paletas de colores completas o tipologías que evolucionaron y terminaron por convivir todas juntas dentro de una misma apuesta, aunque tiempo atrás hubieran
+                    sido perfectas antagónicas.</p>
                 <div class="boton botonsecundario"> <a href="#">Leer más</a></div>
             </div>
 
@@ -93,7 +94,8 @@
                 <div class="publicacion">
                     <p>Publicado <span>4/01/2020</span></p>
                 </div>
-                <p>Femeninos y de impronta casual juvenil, la primavera verano 2020 de la marca argentina de indumentaria nos atrapa con una completísima propuesta en la que incluye los items claves de temporada. Vestidos con escotes cruzados o "v" cortos y largos, monos, minis y maxifaldas, shorts, blazers, sacos y chaquetas que completan estilismos para toda ocasión. </p>
+                <p>Femeninos y de impronta casual juvenil, la primavera verano 2020 de la marca argentina de indumentaria nos atrapa con una completísima propuesta en la que incluye los items claves de temporada. Vestidos con escotes cruzados o "v" cortos
+                    y largos, monos, minis y maxifaldas, shorts, blazers, sacos y chaquetas que completan estilismos para toda ocasión. </p>
                 <button type="button" class="btn btn-info btn-lg botonsecundario" data-toggle="modal" data-target="#leerMas">Leer más</button>
                 <div class="modal fade" id="leerMas" role="dialog">
                     <div class="modal-dialog">
@@ -109,9 +111,11 @@
                                     <p>Publicado <span>4/01/2020</span></p>
                                 </div>
                                 <img src="img/pexels-murat-esibatir-4355377.jpg" alt="ropa de noche">
-                                <p>Femeninos y de impronta casual juvenil, la primavera verano 2020 de la marca argentina de indumentaria nos atrapa con una completísima propuesta en la que incluye los items claves de temporada. Vestidos con escotes cruzados o "v" cortos y largos, monos, minis y maxifaldas, shorts, blazers, sacos y chaquetas que completan estilismos para toda ocasión.</p>
+                                <p>Femeninos y de impronta casual juvenil, la primavera verano 2020 de la marca argentina de indumentaria nos atrapa con una completísima propuesta en la que incluye los items claves de temporada. Vestidos con escotes cruzados
+                                    o "v" cortos y largos, monos, minis y maxifaldas, shorts, blazers, sacos y chaquetas que completan estilismos para toda ocasión.</p>
                                 <img src="img/pexels-ekaterina-bolovtsova-5970910.jpg" alt="">
-                                <p>Coloridas estampas en donde destacan variantes de animal print, rayas y flores dan vida a los diseños de una colección sin desperdicios. </p>
+                                <p>Coloridas estampas en donde destacan variantes de animal print, rayas y flores dan vida a los diseños de una colección sin desperdicios. Compartimos los mejores equipos de esta muestra de estilo casual de carácter urbano
+                                    y ultra femenino como parte de la moda de esta primavera verano 2020.</p>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn botonsecundario" data-dismiss="modal">Cerrar</button>
