cambio de formulario

--- a/ingresar.html
+++ b/ingresar.html
@@ -19,7 +19,7 @@
 <body>
 
 
-     <header class="header">
+    <header class="header">
 
         <div class="header__barra  ">
             <!-- cabecera-->
@@ -62,9 +62,8 @@
             </nav>
 
         </div>
-
     </header>
-    
+
     <main class="contenedor">
         <div class="formularios">
             <div class="ingreso">
@@ -79,9 +78,7 @@
                             <label for="inputPasword ">Contraseña</label>
                             <input type="password ">
                         </div>
-                        <div class="boton ">
-                            <input type="submit " value="Entrar ">
-                        </div>
+                        <input type="submit" value="Entrar">
                     </form>
                 </div>
             </div>
@@ -109,10 +106,8 @@
                         <label for="password ">Escriba su contraseña</label>
                         <input type="password ">
                     </div>
-                    <div class="boton ">
-                        <input type="submit " value="Crear cuenta ">
-                    </div>
 
+                    <input type="submit" value="Enviar cosulta">
                 </form>
             </div>
         </div>
